# roses-scripts

./: .gitignore  README.rst
hack/scripts/: CMakeLists.txt
hack/scripts/base/: CMakeLists.txt  classes.lua  persist-delay.lua  roses-init.lua
hack/scripts/building/: CMakeLists.txt  subtype-change.lua
hack/scripts/civilizations/: CMakeLists.txt  level-up.lua  noble-change.lua  resource-change.lua
hack/scripts/classes/: CMakeLists.txt  add-experience.lua  change-class.lua  learn-skill.lua  level-up.lua
hack/scripts/events/: CMakeLists.txt  trigger.lua
hack/scripts/flow/: CMakeLists.txt  customweather.lua  spawnflow.lua
hack/scripts/gui/: CMakeLists.txt  unit-info-viewer.lua
hack/scripts/item/: CMakeLists.txt  create.lua  material-change.lua  projectile.lua  quality-change.lua  subtype-change.lua
hack/scripts/modtools/: CMakeLists.txt  building-trigger.lua
hack/scripts/special/: CMakeLists.txt  counters.lua
hack/scripts/tile/: CMakeLists.txt  material-change.lua  temperature-change.lua
hack/scripts/unit/: CMakeLists.txt  attribute-change.lua  body-change.lua  boolean-change.lua  counter-change.lua  propel.lua  skill-change.lua  trait-change.lua
raw/scripts/: persist-delay.lua
raw/scripts/civilizations/: establish-civ.lua  read-file.lua
raw/scripts/classes/: establish-class.lua  read-file.lua  requirements-class.lua  requirements-spell.lua
raw/scripts/events/: find-building.lua  find-item.lua  find-location.lua  find-unit.lua  read-file.lua  requirements-check.lua
raw/scripts/wrapper/: checkAge.lua  checkAttributes.lua  checkBody.lua  (+13 more)
