add_subdirectory(base)
add_subdirectory(building)
add_subdirectory(civilizations)
add_subdirectory(classes)
add_subdirectory(events)
add_subdirectory(flow)
add_subdirectory(gui)
add_subdirectory(item)
add_subdirectory(modtools)
add_subdirectory(special)
add_subdirectory(tile)
add_subdirectory(unit)
